--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,18 @@
 <!--			<artifactId>jackson-annotations</artifactId>-->
 <!--			<version>2.15.3</version>-->
 <!--		</dependency>-->
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
