--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ server.port = 9000
 
 
 logging.level.org.springframework = debug
+spring.messages.basename = messages
 
 #spring.jackson.serialization.writes-dates-as-timestamps = false
