--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,23 @@ logging.level.org.springframework = debug
 spring.messages.basename = messages
 
 #spring.jackson.serialization.writes-dates-as-timestamps = false
+
+#management.security.enabled= true
+#spring.security.user.name=username
+#spring.security.user.password=password
+
+# db
+spring.datasource.url = jdbc:h2:mem:sampleDb
+spring.datasource.driverClassName= org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = update
+
+spring.h2.console.enabled=true
+spring.hw.console.path=/h2-console
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.H2Dialect
+
+#end db
+
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
